--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Thiệp mời lễ tốt nghiệp - Trường Đại học Sư phạm Kỹ thuật TP.HCM" />
     <meta name="theme-color" content="#0f172a" />
-    <title>Lễ Tốt Nghiệp | HCMUTE 2026</title>
+    <title>Lễ Tốt Nghiệp Của Trung Queen</title>
   </head>
   <body>
     <div id="root"></div>
