--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎓</text></svg>" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Thiệp mời lễ tốt nghiệp - Trường Đại học Sư phạm Kỹ thuật TP.HCM" />
+    <meta name="description" content="Thiệp mời đến dự lễ tốt nghiệp của Nguyễn Trung Hậu tại Trường Đại học Sư phạm Kỹ thuật TP.HCM (Bây giờ là trường Đại học Công nghệ Kỹ thuật TP.HCM)" />
     <meta name="theme-color" content="#0f172a" />
     <title>Lễ Tốt Nghiệp Của Trung Queen</title>
   </head>
